--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ logo: # path of site logo, e.g. "/assets/images/logo.png"
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-basically-basic
+#theme: jekyll-theme-basically-basic
+remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
 plugins: # previsously gems
   - jekyll-feed
   - jekyll-seo-tag
